# factorial-node-rust-addon

./: README.md  benchmark.js  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
test/: factorial.spec.js
