[package]
name = "factorial-node-rust-addon"
version = "0.1.0"
authors = ["Jose Quintana <git.io/joseluisq>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "threading_hint"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
